[project]
name = "conversationrelay-minimal"
version = "0.1.0"
description = "Minimal ConversationRelay starter with Google Places integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.2.1",
    "requests>=2.32.3",
    "twilio>=9.0.5",
    "openai>=1.13.3",
    "python-multipart>=0.0.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
]
